; ModuleID = '/home/carl/AnghaBench/darwin-xnu/bsd/netinet6/extr_ip6_output.c_ip6_freepcbopts.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/bsd/netinet6/extr_ip6_output.c_ip6_freepcbopts.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ip6_pktopts = type { i32 }

@M_IP6OPT = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @ip6_freepcbopts(%struct.ip6_pktopts* %0) #0 {
  %2 = alloca %struct.ip6_pktopts*, align 8
  store %struct.ip6_pktopts* %0, %struct.ip6_pktopts** %2, align 8
  %3 = load %struct.ip6_pktopts*, %struct.ip6_pktopts** %2, align 8
  %4 = icmp eq %struct.ip6_pktopts* %3, null
  br i1 %4, label %5, label %6

5:                                                ; preds = %1
  br label %12

6:                                                ; preds = %1
  %7 = load %struct.ip6_pktopts*, %struct.ip6_pktopts** %2, align 8
  %8 = call i32 @ip6_clearpktopts(%struct.ip6_pktopts* %7, i32 -1)
  %9 = load %struct.ip6_pktopts*, %struct.ip6_pktopts** %2, align 8
  %10 = load i32, i32* @M_IP6OPT, align 4
  %11 = call i32 @FREE(%struct.ip6_pktopts* %9, i32 %10)
  br label %12

12:                                               ; preds = %6, %5
  ret void
}

declare dso_local i32 @ip6_clearpktopts(%struct.ip6_pktopts*, i32) #1

declare dso_local i32 @FREE(%struct.ip6_pktopts*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
